--- a/generators/app/templates/config/docker-compose.yml
+++ b/generators/app/templates/config/docker-compose.yml
@@ -1,17 +1,17 @@
 <%= appName %>:
   container_name: <%= appName %>
   command: "<%= appName %>/loc"
-  image: dev.docker.kickstartteam.es:5000/kst/framework/<%= appName %>:0.0.2
+  image: "<%= dockerRepo %>/framework/<%= appName %>:0.0.1
   links:
     - mongo
   ports:
     - "9000:9000"
   environment:
-    CONSUL: dev.consul.kickstartteam.es:8500
+    CONSUL: <%= consulRepo %>
 
 mongo:
   container_name: genesis-mongo
   command: '--smallfiles --dbpath=/tmp'
   ports:
     - "27017:27017"
-  image: dev.docker.kickstartteam.es:5000/kst/mongo:latest
+  image: <%= dockerRepo %>/mongo:latest
